@@ -1,3 +1,6 @@
+21. Jun 2011 Christoph Thielecke <crissi99@gmx.de>
+	- volumes dir in file tree for adding new media added on osx (fixes: 3323375)
+
 18. Jun 2011 Christoph Thielecke <crissi99@gmx.de>
 	- handle different date formats on whereisit xml import
 	- import files/folder too if media number mismatch but media name match
